--- a/sass/components/linkit/_linkit.scss
+++ b/sass/components/linkit/_linkit.scss
@@ -3,7 +3,7 @@
    ========================================================================== */
 
 .ui-dialog.linkit-wrapper {
-  z-index: 501;
+  z-index: 9999;
   background-color: white !important;
   .ui-dialog-titlebar {
     border: none;
