--- a/sass/components/media/_media.scss
+++ b/sass/components/media/_media.scss
@@ -3,5 +3,5 @@
    ========================================================================== */
 
 .media-wrapper {
-  z-index: 999 !important;
+  z-index: 9999 !important;
 }
